[package]
name = "shuck-n-jive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dict = "0.1.5"
gray_matter = "0.2.6"
grey = "0.1.1"
hashmap = "0.0.1"
markdown = "1.0.0-alpha.14"
mysql = "24.0.0"
pulldown-cmark = "0.9.3"
queue = "0.3.1"
serde = "1.0.190"
stack = "0.4.0"
tera = "1.19.1"
vec = "0.0.0"
voca_rs = "1.15.2"
yaml-rust = "0.4.5"
